removed relative left property to avoid overflow

--- a/mobile.css
+++ b/mobile.css
@@ -54,7 +54,6 @@ body{
     margin: 2em;
     max-width: 400px;
     position: relative;
-    left: 10%;
 
 }
 
